tests/errors/index_non_integer_substring1.f90
program index_non_integer_substring1
    character(8) :: x
    x = "dothraki"
    print *, x(1.1:2)
end program
